--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -1,1 +1,12 @@
-<p>not-found works!</p>
+<div class="container mt-5 ml-5 mf-5">
+    <div class="row">
+        <div class="col col-12 col-sm-12 col-md-12 col-lg-6">
+            <h1>Oops! error 404</h1>
+            <p>Lo sentimos pero no hemos encontrado la pagina que buscas</p>
+            <button type="button" class="btn btn-primary" [routerLink]="['/home']"> Regresar </button>
+        </div>
+        <div class="col col-12 col-sm-12 col-md-12 col-lg-6">
+            <img src="../../../assets/img/404error.png" class="img-fluid float-end" alt="pagina no encontrada">
+        </div>
+    </div>
+</div>
