--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
 
 @font-face{
     font-family: 'Nunito';
-    src: url('./assets/Nunito-Regular.ttf');
+    src: url('./assets/font/Nunito-Regular.ttf');
 }
 
 * {
